<resources>
    <string name="app_name">MVP Movie</string>
    <string name="action_settings">Settings</string>
    <string name="text_s_copied">Copied %s</string>
    <string name="try_again">Try Again</string>
    <string name="lorem_ipsum2">fasd</string>
    <string name="search_hint">Finding Movies, Tv Shows, ..</string>
    <string name="trending">Trends</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="invalid_movie_id">Invalid IMDB Id</string>
    <string name="hide_forever">Hide Forever</string>
    <string name="movie_will_not_be_show_again">This movie will not be show again.</string>
    <string name="favorites">Favorites</string>
    <string name="all">View All</string>
    <string name="show_in_future_search">Show in Future Searches</string>
    <string name="hide_from_future_searches">Hide from Future Searches</string>
    <string name="hide_from_future_searches_msg">This movie will not be shown in future searches</string>
    <string name="show_in_future_search_msg">This movie will be shown in future searches</string>
    <string name="there_is_no_favorite_in_this_list">There is no Favorite Movie in this List.</string>
    <string name="hiddens">Hiddens</string>
    <string name="there_is_no_hidden_in_this_list">There is no Hidden Movies in your List</string>
    <string name="app_name_2">MVP Movie</string>
    <string name="drawer_item_favorites">Favorites</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_hiddens">Hidden</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_logout">Logout</string>
    <string name="feature_not_implemented">This feature is not implemented.</string>
    <string name="drawer_item_search">Search</string>
    <string name="open_internet_settings">Open Internet Settings</string>
    <string name="movie_desc">Movie Description..</string>
    <string name="refresh">Try again</string>
    <string name="no_results_was_found_for_s_please_search_with_another_term">No Results was found for %s, please search with another term.</string>
    <string name="error_happened">"Oops! "</string>
    <string name="unknown_error">An unknown network error happened, please try again.</string>
    <string name="no_results">No Results</string>
    <string name="type_to_find">Search Now</string>
    <string name="type_term_to_find">Find the Movie or TV show by searching on the above box</string>
    <string name="search_now">Search</string>
</resources>