<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/srl"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/appbar_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageView
                        android:background="?selectableItemBackgroundBorderless"
                        android:id="@+id/menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="16dp"
                        android:src="@drawable/ic_bars"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="MVP Movie"
                        android:textColor="@color/navy"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/menu"
                        app:layout_constraintStart_toEndOf="@+id/menu"
                        app:layout_constraintTop_toTopOf="@+id/menu" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/search_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appbar_cv">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/search_bg">

                    <ImageView
                        android:id="@+id/search_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:alpha="0.5"
                        android:src="@drawable/ic_search"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/search_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/md_transparent"
                        android:hint="@string/search_hint"
                        android:padding="8dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/search_iv"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/trends_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/trending"
                android:textColor="@color/navy"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/trending_ic"
                app:layout_constraintStart_toEndOf="@+id/trending_ic"
                app:layout_constraintTop_toTopOf="@+id/trending_ic" />

            <ImageView
                android:id="@+id/trending_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                app:tint="@color/navy"
                android:src="@drawable/ic_fire"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_cv" />


            <com.mikelau.views.shimmer.ShimmerRecyclerViewX
                android:id="@+id/trending_rv"
                android:minHeight="196dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:shimmer_demo_child_count="2"
                app:shimmer_demo_layout="@layout/item_movie_card_shimmer"
                app:shimmer_demo_layout_manager_type="grid"
                app:shimmer_demo_grid_child_count="2"
                app:shimmer_demo_angle="20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trends_label"
                />


            <TextView
                android:id="@+id/fav_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/favorites"
                android:textColor="@color/navy"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/favorites_ic"
                app:layout_constraintStart_toEndOf="@+id/favorites_ic"
                app:layout_constraintTop_toTopOf="@+id/favorites_ic" />

            <ImageView
                android:id="@+id/favorites_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                app:tint="@color/navy"
                android:src="@drawable/ic_baseline_favorite_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trending_rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:id="@+id/favorites_rv"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fav_label" />

            <TextView
                android:background="?selectableItemBackgroundBorderless"
                android:id="@+id/more_lb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textSize="10dp"
                android:textStyle="bold"
                android:textColor="@color/navy"
                app:layout_constraintBottom_toBottomOf="@+id/more_ic"
                app:layout_constraintEnd_toStartOf="@+id/more_ic"
                app:layout_constraintTop_toTopOf="@+id/more_ic" />

            <ImageView
                android:id="@+id/more_ic"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_angle_double_right"
                app:layout_constraintBottom_toBottomOf="@+id/favorites_ic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/favorites_ic"
                app:tint="@color/navy" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>